<resources>
    <string name="app_name">PoE optimal trade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="percent">Проценты</string>
    <string name="Standard">Стандард</string>
    <string name="league">Лига</string>
    <string name="title">Название</string>
    <string name="search">Поиск...</string>
</resources>